<resources>
    <string name="app_name">*GreenCity</string>
    <string name="action_share">Share</string>
    <string name="str_login">Login</string>
    <string name="str_signup">SignUp</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="str_enter_valid_email">Invalid Email</string>
    <string name="str_enter_password">Invalid Password</string>
    <string name="str_password_must_be_same">Password does not match</string>
    <string name="str_confirm_password">Confirm password</string>
    <string name="str_phone">Phone</string>
    <string name="str_i_accept">I accept terms and conditions</string>
    <string name="str_invalid_phone_number">Invalid phone number</string>
    <string name="str_signup_success">Great! You are ready to SignUp.</string>
    <string name="str_please_accept">Please accept terms and conditions</string>
    <string name="str_share">Share</string>
    <string name="str_repo_url">https://github.com/pranaypatel512/RxLoginSignUp</string>
    <string name="str_name">Name</string>
    <string name="str_city">City</string>


    <dimen name="dimen_10dp">10dp</dimen>
    <string name="facebook_app_id">1452372784826052</string>
    <string name="fb_login_protocol_scheme">fb1452372784826052</string>
    <dimen name="dimen_16dp">16dp</dimen>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_navigation">Navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="uploaded">Uploaded</string>
    <string name="thought">The best time to plant a tree is 20 years ago. The second best time is now  :-)</string>
    <string name="address_line1">Address Line 1</string>
    <string name="address_line2">Address Line 2</string>
</resources>
